--- a/CSS/contact-style.css
+++ b/CSS/contact-style.css
@@ -7,25 +7,25 @@
 #gitBadge {
     margin-bottom: 15px;
     font-size: 50px;
-    color: #262626;
+    color: #F2F2F2;
 }
 
 #gitBadge:hover {
-    color: #886196
+    color: #F27405;
 }
 
 #linkIn {
     margin-bottom: 15px;
     font-size: 50px;
-    color: #262626;
+    color: #F2F2F2;
 }
 
 #linkIn:hover {
-    color: #886196;
+    color: #F27405;
 }
 
 body {
-    background-color: #dddddd;
+    background-color: #191F26;
     width: 100%;
     height: 100%;
 }
@@ -35,8 +35,7 @@ body {
 }
 
 nav .logo {
-    background-color: #3E806C;
-    color: #ffffff;
+    color: #F2F2F2;
     text-align: center;
     font-family: 'Playfair Display', serif;
     letter-spacing: 1px;
@@ -49,14 +48,16 @@ nav .logo {
 }
 
 .nav {
-    background-color: #3E806C;
-    color: #ffffff;
+    color: #F2F2F2;
     padding: 10px 0;
 }
 
 a {
-    color: #ffffff;
+    color: #F2F2F2;
     font-size: 16px;
+}
+a:hover {
+    color: #F27405;
 }
 
 .wrapper {
@@ -65,15 +66,16 @@ a {
 }
 
 .bin {
-    background-color: #ffffff;
+    background-color: #2B3440;
     height: 60%;
     padding: 0 15px;
-    margin: 0 20px 0 20px;
+    margin: 0 auto;
     max-width: 728px;
+    border-radius: 15px;
 }
 
 h2 {
-    color: #3E806C;
+    color: #f2f2f2;
     padding: 20px 0 10px 0;
     font-family: 'Playfair Display', serif;
     letter-spacing: 1px;
@@ -82,11 +84,11 @@ h2 {
 
 hr {
     margin: 0 0 15px 0;
-    border-top: solid darkgrey 2px;
+    border-top: solid #F27405 2px;
 }
 
 label {
-    color: #A9A9A9;
+    color: #F2F2F2;
 }
 
 button {
@@ -95,8 +97,9 @@ button {
     padding: 0.3rem 1.5rem;
     margin: 0 0 15px 0;
     text-decoration: none;
-    background: #3E806C;
-    color: #ffffff;
+    background: #191F26;
+    color: #F2F2F2;
+    border-radius: 10px;
     text-align: center;
     transition: background 0.25s ease-in-out, 
     transform 0.2 ease;
@@ -105,12 +108,12 @@ button {
 
 button:hover {
     transition: ease-out 0.15s;
-    background: #3E806C;
+    background: #191F26;
     box-shadow: 3px 5px darkgrey;
 }
 
 button:focus {
-    outline: 1px solid #ffffff;
+    outline: 1px solid #F2F2F2;
     outline-offset: -3px;
 }
 
@@ -119,12 +122,12 @@ button:active {
 }
 
 h6 {
-    border-top: solid 4px #3E806C;
+    border-top: solid 4px #F27405;
     font-size: 10px;
     text-align: center;
     padding: 20px 20px;
-    background-color: rgb(100, 100, 100);
-    color: #ffffff9a;
+    background-color: #2B3440;
+    color: #F2F2F2;
     margin-top: 28px;
 }
 
@@ -137,7 +140,7 @@ h6 {
 }
 
 body {
-    background-color: #dddddd;
+    background-color: #191F26;
     width: 100%;
     height: 100%;
 }
@@ -147,8 +150,7 @@ body {
 }
 
 nav .logo {
-    background-color: #3E806C;
-    color: #ffffff;
+    color: #F2F2F2;
     text-align: center;
     font-family: 'Playfair Display', serif;
     letter-spacing: 1px;
@@ -160,14 +162,17 @@ nav .logo {
 }
 
 .nav {
-    background-color: #3E806C;
-    color: #ffffff;
+    color: #F2F2F2;
     padding: 10px 0;
 }
 
 a {
-    color: #ffffff;
+    color: #F2F2F2;
     font-size: 16px;
+}
+
+a:hover {
+    color: #F27405;
 }
 
 .wrapper {
@@ -176,16 +181,16 @@ a {
 }
 
 .bin {
-    background-color: #ffffff;
+    background-color: #2B3440;
     height: 60%;
     padding: 0 15px;
-    margin: 0 20px 0 20px;
+    margin: 0 auto;
     max-width: 728px;
     margin-top: 28px;
 }
 
 h2 {
-    color: #3E806C;
+    color: #F2F2F2;
     padding: 20px 0 10px 0;
     font-family: 'Playfair Display', serif;
     letter-spacing: 1px;
@@ -194,11 +199,11 @@ h2 {
 
 hr {
     margin: 0 0 15px 0;
-    border-top: solid darkgrey 2px;
+    border-top: solid #F27405 2px;
 }
 
 label {
-    color: #A9A9A9;
+    color: #F2F2F2;
 }
 
 button {
@@ -207,8 +212,8 @@ button {
     padding: 0.3rem 1.5rem;
     margin: 0 0 15px 0;
     text-decoration: none;
-    background: #3E806C;
-    color: #ffffff;
+    background: #191F26;
+    color: #F2F2F2;
     text-align: center;
     transition: background 0.25s ease-in-out, 
     transform 0.2 ease;
@@ -217,12 +222,12 @@ button {
 
 button:hover {
     transition: ease-out 0.15s;
-    background: #3E806C;
+    background: #191F26;
     box-shadow: 3px 5px darkgrey;
 }
 
 button:focus {
-    outline: 1px solid #ffffff;
+    outline: 1px solid #F2F2F2;
     outline-offset: -3px;
 }
 
@@ -231,12 +236,12 @@ button:active {
 }
 
 h6 {
-    border-top: solid 4px #3E806C;
+    border-top: solid 4px #F27405;
     font-size: 10px;
     text-align: center;
     padding: 20px 20px;
-    background-color: rgb(100, 100, 100);
-    color: #ffffff9a;
+    background-color: #2B3440;
+    color: #f2f2f2;
     margin-top: 28px;
 }
 
@@ -249,14 +254,13 @@ h6 {
     }
 
     body {
-        background-color: #dddddd;
+        background-color: #191F26;
         width: 100%;
         height: 100%;
     }
     
     nav .logo {
-        background-color: #3E806C;
-        color: #ffffff;
+        color: #F2F2F2;
         text-align: center;
         font-family: 'Playfair Display', serif;
         letter-spacing: 1px;
@@ -264,15 +268,18 @@ h6 {
     }
     
     .nav {
-        background-color: #ffffff;
-        color: darkgrey;
+        color: #F2F2F2;
         padding: 10px 0;
         margin-bottom: 0px;
     }
     
     a {
-        color: darkgrey;
+        color: #F2F2F2;
         font-size: 16px;
+    }
+
+    a:hover {
+        color: #F27405;
     }
     
     .wrapper {
@@ -281,14 +288,14 @@ h6 {
     }
     
     .bin {
-        background-color: #ffffff;
+        background-color: #2B3440;
         height: 60%;
         padding: 0 15px;
-        margin: 0 20px 0 20px;
+        margin: 0 auto;
     }
     
     h2 {
-        color: #3E806C;
+        color: #f2f2f2;
         padding: 20px 0 10px 0;
         font-family: 'Playfair Display', serif;
         letter-spacing: 1px;
@@ -297,12 +304,12 @@ h6 {
     
     hr {
         margin: 0 0 15px 0;
-        border-top: solid darkgrey 2px;
+        border-top: solid #F27405 2px;
     }
 
     
     label {
-        color: #A9A9A9;
+        color: #F2F2F2;
     }
     
     button {
@@ -311,7 +318,7 @@ h6 {
         padding: 0.3rem 1.5rem;
         margin: 0 0 15px 0;
         text-decoration: none;
-        background: #3E806C;
+        background: #191F26;
         color: #ffffff;
         text-align: center;
         transition: background 0.25s ease-in-out, 
@@ -321,12 +328,12 @@ h6 {
     
     button:hover {
         transition: ease-out 0.15s;
-        background: #3E806C;
+        background: #191F26;
         box-shadow: 3px 5px darkgrey;
     }
     
     button:focus {
-        outline: 1px solid #ffffff;
+        outline: 1px solid #F2F2F2;
         outline-offset: -3px;
     }
     
@@ -335,12 +342,12 @@ h6 {
     }
 
     h6 {
-        border-top: solid 4px #3E806C;
+        border-top: solid 4px #F27405;
         font-size: 10px;
         text-align: center;
         padding: 20px 20px;
-        background-color: rgb(100, 100, 100);
-        color: #ffffff9a;
+        background-color: #2B3440;
+        color: #F2F2F2;
         margin-top: 28px;
     }
 
