--- a/CSS/portfolio-style.css
+++ b/CSS/portfolio-style.css
@@ -6,7 +6,7 @@
 }
 
 body {
-    background-color: #dddddd;
+    background-color: #191F26;
     width: 100%;
     height: 100%;
     min-height: 100vh;
@@ -17,8 +17,7 @@ body {
 }
 
 nav .logo {
-    background-color: #3E806C;
-    color: #ffffff;
+    color: #F2F2F2;
     text-align: center;
     font-family: 'Playfair Display', serif;
     letter-spacing: 1px;
@@ -31,14 +30,17 @@ nav .logo {
 }
 
 .nav {
-    background-color: #3E806C;
-    color: #ffffff;
+    color: #F2F2F2;
     padding: 10px 0;
 }
 
 a {
-    color: #ffffff;
+    color: #F2F2F2;
     font-size: 16px;
+}
+
+a:hover {
+    color: #F27405;
 }
 
 .wrapper {
@@ -47,15 +49,16 @@ a {
 }
 
 .bin {
-    background-color: #ffffff;
+    background-color: #2B3440;
     height: 800px;
     padding: 0 15px;
-    margin: 0 20px 0 20px;
+    margin: 0 auto;
     max-width: 728px;
+    border-radius: 15px;
 }
 
 h2 {
-    color: #3E806C;
+    color: #f2f2f2;
     padding: 20px 0 10px 0;
     font-family: 'Playfair Display', serif;
     letter-spacing: 1px;
@@ -64,22 +67,25 @@ h2 {
 
 hr {
     margin: 0 0 15px 0;
-    border-top: solid darkgrey 2px;
+    border-top: solid #F27405 2px;
 }
 
 h6
  {
-    border-top: solid 4px #3E806C;
+    border-top: solid 4px #F27405;
     font-size: 10px;
     text-align: center;
     padding: 20px 20px;
-    background-color: rgb(100, 100, 100);
-    color: #ffffff9a;
+    background-color: #2B3440;
+    color: #F2F2F2;
     margin-top: auto;
 }
 
 img {
     margin: 15px;
+    width: 300px;
+    height: 200px;
+    object-fit: cover;
 }
 
 
@@ -92,14 +98,13 @@ img {
 }
 
 body {
-    background-color: #dddddd;
+    background-color: #191F26;
     width: 100%;
     height: 100%;
 }
 
 nav .logo {
-    background-color: #3E806C;
-    color: #ffffff;
+    color: #F2F2F2;
     text-align: center;
     font-family: 'Playfair Display', serif;
     letter-spacing: 1px;
@@ -107,15 +112,18 @@ nav .logo {
 }
 
 .nav {
-    background-color: #ffffff;
-    color: darkgrey;
+    color: #F2F2F2;
     padding: 10px 0;
     margin-bottom: 0;
 }
 
 a {
-    color: darkgrey;
+    color: #F2F2F2;
     font-size: 16px;
+}
+
+a:hover {
+    color: #F27405;
 }
 
 .wrapper {
@@ -126,13 +134,14 @@ a {
 .bin {
     height: 1600px;
     width: 600px;
-    background-color: #ffffff;
+    background-color: #2B3440;
     padding: 0 15px;
-    margin: 0 0 0 20px;
+    margin: 0 auto;
+    border-radius: 15px;
 }
 
 h2 {
-    color: #3E806C;
+    color: #f2f2f2;
     padding: 20px 0 10px 0;
     font-family: 'Playfair Display', serif;
     letter-spacing: 1px;
@@ -141,21 +150,24 @@ h2 {
 
 hr {
     margin: 0 0 15px 0;
-    border-top: solid darkgrey 2px;
+    border-top: solid #F27405 2px;
 }
 
 h6 {
-    border-top: solid 4px #3E806C;
+    border-top: solid 4px #F27405;
     font-size: 10px;
     text-align: center;
     padding: 20px 20px;
-    background-color: rgb(100, 100, 100);
-    color: #ffffff9a;
+    background-color: #2B3440;
+    color: #F2F2F2;
     margin-top: auto;
 }
 
 img {
     margin: 15px 0 15px 120px;
+    width: 300px;
+    height: 200px;
+    object-fit: cover;
 }
 
 }
