--- a/CSS/about-style.css
+++ b/CSS/about-style.css
@@ -3,6 +3,7 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    font-family: 'Roboto', sans-serif;
 }
 
 body {
@@ -19,7 +20,7 @@ body {
 nav .logo {
     color: #F2F2F2;
     text-align: center;
-    font-family: 'Playfair Display', serif;
+    font-family: 'Roboto', sans-serif;
     letter-spacing: 1px;
     padding: 15px 0;
     
@@ -60,7 +61,7 @@ a:hover {
 h2 {
     color: #F2F2F2;
     padding: 20px 0 10px 0;
-    font-family: 'Playfair Display', serif;
+    font-family: 'Roboto', sans-serif;
     letter-spacing: 1px;
     font-size: 25px;
 }
@@ -113,7 +114,7 @@ body {
 nav .logo {
     color: #F2F2F2;
     text-align: center;
-    font-family: 'Playfair Display', serif;
+    font-family: 'Roboto', sans-serif;
     letter-spacing: 1px;
     font-size: 0.8rem;
     padding: 15px 0;
@@ -152,7 +153,7 @@ a:hover {
 h2 {
     color: #F2F2F2;
     padding: 20px 0 10px 0;
-    font-family: 'Playfair Display', serif;
+    font-family: 'Roboto', sans-serif;
     letter-spacing: 1px;
     font-size: 25px;
 }
