--- a/CSS/contact-style.css
+++ b/CSS/contact-style.css
@@ -2,6 +2,8 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    font-family: 'Roboto', sans-serif;
+
 }
 
 #gitBadge {
@@ -37,7 +39,7 @@ body {
 nav .logo {
     color: #F2F2F2;
     text-align: center;
-    font-family: 'Playfair Display', serif;
+    font-family: 'Roboto', sans-serif;
     letter-spacing: 1px;
     padding: 15px 0;
     
@@ -77,7 +79,7 @@ a:hover {
 h2 {
     color: #f2f2f2;
     padding: 20px 0 10px 0;
-    font-family: 'Playfair Display', serif;
+    font-family: 'Roboto', sans-serif;
     letter-spacing: 1px;
     font-size: 25px;
 }
@@ -152,7 +154,7 @@ body {
 nav .logo {
     color: #F2F2F2;
     text-align: center;
-    font-family: 'Playfair Display', serif;
+    font-family: 'Roboto', sans-serif;
     letter-spacing: 1px;
     padding: 15px 0;
 }
@@ -192,7 +194,7 @@ a:hover {
 h2 {
     color: #F2F2F2;
     padding: 20px 0 10px 0;
-    font-family: 'Playfair Display', serif;
+    font-family: 'Roboto', sans-serif;
     letter-spacing: 1px;
     font-size: 25px;
 }
@@ -262,7 +264,8 @@ h6 {
     nav .logo {
         color: #F2F2F2;
         text-align: center;
-        font-family: 'Playfair Display', serif;
+    font-family: 'Roboto', sans-serif;
+
         letter-spacing: 1px;
         padding: 15px 0;
     }
@@ -297,7 +300,8 @@ h6 {
     h2 {
         color: #f2f2f2;
         padding: 20px 0 10px 0;
-        font-family: 'Playfair Display', serif;
+    font-family: 'Roboto', sans-serif;
+
         letter-spacing: 1px;
         font-size: 25px;
     }
