--- a/CSS/portfolio-style.css
+++ b/CSS/portfolio-style.css
@@ -3,6 +3,7 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    font-family: 'Roboto', sans-serif;
 }
 
 body {
@@ -17,9 +18,9 @@ body {
 }
 
 nav .logo {
+    font-family: 'Roboto', sans-serif;
     color: #F2F2F2;
     text-align: center;
-    font-family: 'Playfair Display', serif;
     letter-spacing: 1px;
     padding: 15px 0;
     
@@ -58,9 +59,9 @@ a:hover {
 }
 
 h2 {
+    font-family: 'Roboto', sans-serif;
     color: #f2f2f2;
     padding: 20px 0 10px 0;
-    font-family: 'Playfair Display', serif;
     letter-spacing: 1px;
     font-size: 25px;
 }
@@ -104,9 +105,9 @@ body {
 }
 
 nav .logo {
+    font-family: 'Roboto', sans-serif;
     color: #F2F2F2;
     text-align: center;
-    font-family: 'Playfair Display', serif;
     letter-spacing: 1px;
     padding: 15px 0;
 }
@@ -141,9 +142,9 @@ a:hover {
 }
 
 h2 {
+    font-family: 'Roboto', sans-serif;
     color: #f2f2f2;
     padding: 20px 0 10px 0;
-    font-family: 'Playfair Display', serif;
     letter-spacing: 1px;
     font-size: 25px;
 }
